# Fitness-Monitor

./: 0_10_0.TXT  ADC.c  ADC.h  Parts_list.xls  README  adcUTIL.h  git_commit.sh  heart_rate.c  heart_rate.h  lcd.c  lcd.h  lcdUTIL.h  ledUTIL.h  nRF24L01.c  nRF24L01.h  rtc.c  rtc.h  sleep.c  sleep.h  spi.c  submit.ext  submit.git  submit.txt  testing.c  uartUTIL.h
Accelerometer/: diskio.h  ffconf.h  lcd.c  main.c  main.hex
Final/: Makefile  diskio.c  main.c  main.hex
Grapher/: README.txt  process.py
LCD/: glcd.c  lcd.h  main.c  main.hex  pyterminal.py
LCD_test/: Makefile  Makefile_168  glcd.c  glcd.h  logo_glcd.h  main.c  main.hex  old_main.c  uart.c  uart.h
Onus/: .anjuta_sym_db.db  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  onus.glade
Onus/.anjuta/: associations
Onus/.anjuta/session/: anjuta.session  dock-layout.xml
Onus/autom4te.cache/: output.1  requests  traces.0  traces.1
Onus/src/: Makefile  Makefile.am  Makefile.in  onus.py  onus.py~
Primary/: main.c  main.hex
Recieve/: Makefile  main.c  main.hex
SDCard/: Makefile  avr_mmc.elf  avr_mmc.lst  avr_mmc.map  ccsbcs.c  discio.c  diskio.c  diskio.h  ff.c  ffconf.h  main.c  main.hex  mmc.c  rtc.c  rtc.h  uart.c  uart.h  xitoa.lst
Secondary/: main.c  main.hex
Test/: main.c  main.hex
Transmit/: main.c
USB/: Makefile  README  main.c  main.hex  onus.rules  pyterminal.py  uart.c
heart_rate/: Makefile  demo.c  heart_rate.c  heart_rate.h  main.c  main.hex
lib/: ADC.c  ADC.h  diskio.c  lcd.h  nRF24L01.c  nRF24L01.h  rtc.c  rtc.h  sleep.c  (+4 more)
(+26 files in other folders)
